# TV-APP_Logo-Detection

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  local.properties
app/src/main/: AndroidManifest.xml
app/src/main/assets/: channel.param  channel_detector.param
app/src/main/java/com/tencent/yolov8ncnn/: MainActivity.java
app/src/main/jni/: CMakeLists.txt  yolo.cpp  yolov8ncnn.cpp
app/src/main/jni/include/: track.h  tracker.h  utils.h  yolo.h
app/src/main/res/layout/: main.xml
app/src/main/res/values/: strings.xml
